# console-calculator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ask.cpp  ask.h  extras.cpp  extras.h  main.cpp  operations.cpp  operations.h
